--- a/index.html
+++ b/index.html
@@ -3,10 +3,40 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="styles/normalize.css">
   <title>Научиться учиться</title>
 </head>
-<body>
-  <div class="page">
+<body class="page">
+  <header class="header flex_header">
+    <div class="header__logo">
+      <img src="images/logo_place_header.svg" alt="Логотип Яндекс.Практикум">
+    </div>
+    <div class="header__title">
+      <h1 class="header__title_text">Научиться учиться</h1>
+    </div>
+    <div class="header__subtitle">
+      <p class="header__subtitle_text">Какие современные и эффективные подходы к обучению вы можете использовать в
+        своей жизни? <a href="#" class="header__subtitle_text_link">Узнать &rarr;</a></p>
+    </div>
+    <img src="images/header-image.png" alt="Снова двойка" class="header__main-illustration">
+    <div class="header__square-pic"></div>
+  </header>
+  <div class="content">
+    <div class="description">
+
+    </div>
+    <div class="digits">
+
+    </div>
+    <div class="feynman">
+
+    </div>
+    <div class="kaufman">
+
+    </div>
+  </div>
+  <div class="footer">
 
   </div>
 </body>
