проект на проверку 2

--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@
         <h2 class="footer__column_heading">Соцсети</h2>
         <ul class="footer__column_links">
           <li><a href="#" class="footer__column_link">
-            <img src="./images/youtube-icon.svg" alt="YouTube" class="footer__columns_social_icons">YouTube</a></li>
+            <img src="./images/youtube-icon.svg" alt="Ютуб" class="footer__columns_social_icons">YouTube</a></li>
           <li><a href="#" class="footer__column_link">
             <img src="./images/vk_color_white.svg" alt="ВКонтакте" class="footer__columns_social_icons">ВКонтакте</a></li>
           <li><a href="#" class="footer__column_link">
-            <img src="./images/tiktok-icon.svg" alt="TikTok" class="footer__columns_social_icons">TikTok</a></li>
+            <img src="./images/tiktok-icon.svg" alt="ТикТок" class="footer__columns_social_icons">TikTok</a></li>
         </ul>
       </div>
     </div>
