--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="page">
   <header class="header">
-    <img src="./images/logo_place_header.svg" alt="Яндекс.Практикум" class="logo_place_header">
+    <img src="./images/logo_place_header.svg" alt="Яндекс.Практикум" class="logo logo_place_header">
     <h1 class="header__title">Научиться учиться</h1>
     <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
       <a href="#" class="header__link">Узнать &rarr;</a></p>
@@ -129,7 +129,7 @@
   <footer class="footer">
     <div class="footer__columns">
       <div class="footer__column footer__column_content_copyright">
-        <img src="./images/logo_place_footer.svg" alt="Яндекс.Практикум" class="logo_place_footer">
+        <img src="./images/logo_place_footer.svg" alt="Яндекс.Практикум" class="logo logo_place_footer">
         <p class="footer__author">&copy; Сергей Корнилов</p>
       </div>
       <nav class="footer__column footer__column_content_info">
